<resources>
    <string name="app_name">TravelApp</string>

    <string name="usernamehint">example@example.com</string>
    <string name="passwordhint">no less than 10 characters</string>
    <string name="signinbutton">Sign in</string>
    <string name="signupbutton">Sign up</string>
    <string name="donthaveanaccount">Don\'t have an account? Sign up below</string>
    <string name="alreadyhaveaccount">Already have an account? Sign in below</string>
    <string name="Signuppasswordhint">Password </string>
    <string name="emailhint">Email address</string>
    <string name="signupbuttonhint">SIGN UP</string>
    <string name="useritemupload">Upload an item you want to trade</string>
    <string name="nameOfItem">Enter the name of item</string>
    <string name="uploadhelp">Now click on Upload Item to add item</string>
    <string name="showprofile">Trade Feed Page</string>
    <string name="firstname">First name:</string>
    <string name="lastname">Last name:</string>
    <string name="gradyear">Graduation year</string>
    <string name="enterfirstname">Enter First Name</string>
    <string name="enterlastname">Enter Last Name</string>
    <string name="choosebtn">Choose Image</string>
    <string name="uploaditem">Upload Item</string>
    <string name="chat">Chat</string>
    <string name="enter_review_for_this_item">Enter Review for this item</string>
    <string name="add_review">Add Review</string>
    <string name="trade_feed">Trade Feed</string>
    <string name="users">Users</string>
    <string name="inventory">Inventory</string>
    <string name="item_details">Item Details</string>
    <string name="allchats">Chats</string>
    <string name="user_profile">Profile"</string>
    <string name="empty_message_error">Can not send empty message</string>
    <string name="review_error">Please Enter a Review</string>
    <string name="out_of_stock">Item successfully marked out of stock</string>
    <string name="item_traded">Item Traded"</string>
    <string name="verify_email_password">Please verify your e-mail and password</string>
    <string name="already_registered">You are already registered here</string>
    <string name="register_successful">User registration is Successful. Please verify your e-mail address.</string>
    <string name="travel_feed">Travel Feed</string>
    <string name="post_button">Post Trip</string>
    <string name="hint_city_or_town">City or Town</string>
    <string name="hint_title">Title </string>
    <string name="hint_description">Description </string>
    <string name="toast_uploading_photo">Uploading photo...</string>
    <string name="dialog_select_photo_choose_photo_from_memory">Choose photo from memory</string>
    <string name="dialog_select_photo_take_a_photo">Take a photo</string>
    <string name="dialog_select_photo">Select photo</string>
    <string name="add_a_trip"><u><b>Add a trip</b></u></string>
    <string name="please_choose_a_state">Please choose a state!</string>
    <string name="please_specify_a_city">Please specify a city!</string>
    <string name="please_select_a_photo">Please select a photo!</string>
    <string name="toast_compressing_photo">Compressing photo...</string>
    <string name="toast_photo_uploaded_successfully">Photo uploaded successfully!</string>
    <string name="toast_could_not_upload_photo">Could not upload photo</string>
    <string name="hint_length_of_trip">Length of Trip</string>
    <string name="hint_start_date">Start Date</string>
    <string name="please_specify_a_number_of_days">Please specify a number of days!</string>
    <string name="please_specify_the_start_date">Please specify the start date!</string>
    <string name="Trip">Trip</string>
    <string name="text_trip_length">Trip length:</string>
    <string name="text_days">days</string>
    <string name="text_day">day</string>
    <string name="hint_search">Search...</string>
    <string name="elasticsearch">elasticsearch</string>
    <string name="field_password">password</string>
    <string name="search_hint">Search...</string>
    <string name="save_button">Save Changes</string>
    <string name="cancel_button">CANCEL</string>
    <string name="toast_trip_updated">Trip is updated!</string>
    <string name="toast_trip_posted">Trip is posted successfully!</string>
    <string name="remove_button">REMOVE TRIP</string>
    <string name="set_trip_as_public">Set trip as visible to public\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="is_public">Trip is public</string>
    <string name="is_private">Trip is private</string>
    <string name="travelers_diary">Traveler\'s Diary</string>
    <string name="text_email_address">Email Address:</string>
    <string name="text_password">Password:</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="remove_trip">Delete Trip</string>
    <string name="your_travel_stories">Your Travel Stories</string>
    <string name="no_trip_hint">You haven\'t added any trips yet,</string>
    <string name="add_a_trip_lowercase"><u>add a trip</u></string>
    <string name="view_travel_feed"><b>View Travel Feed</b></string>
    <string name="no_trip_in_state_hint">There is no trip in the selected state.</string>
    <string name="select_action">Select Action</string>
    <string name="set_as_public">Set as Public</string>
    <string name="set_as_private">Set as Private</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="logout"><u>Logout</u></string>
    <string name="trip_date">Visited on:</string>
    <string name="hint_state">State</string>
    <string name="hint_no_date">no date provided</string>
    <string name="add_a_trip_title">Add a Trip</string>
    <string name="hint_number_of_days">Number of days</string>
    <string name="title_your_travel_map">Your Travel Map</string>
    <string name="title_usa">United States of America</string>
    <string name="hint_message">Message</string>
    <string name="choose_the_field_you_want_to_edit">Choose the field you want to edit:</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="history">History</string>
    <string name="explore">Explore</string>
    <string name="no_history_in_current_state">You haven\'t visited this state yet.</string>
    <string name="no_trip_in_current_state">No recommended trip in this state.</string>
    <string name="plan_trip">Plan Trip</string>
    <string name="add_trip">Add Trip</string>
    <string name="travel_stories">Travel Stories</string>
    <string-array name="state">
        <item></item>
        <item>Minnesota</item>
        <item>Montana</item>
        <item>North Dakota</item>
        <item>Idaho</item>
        <item>Washington</item>
        <item>Arizona</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Nevada</item>
        <item>New Mexico</item>
        <item>Oregon</item>
        <item>Utah</item>
        <item>Wyoming</item>
        <item>Arkansas</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Missouri</item>
        <item>Nebraska</item>
        <item>Oklahoma</item>
        <item>South Dakota</item>
        <item>Louisiana</item>
        <item>Texas</item>
        <item>Connecticut</item>
        <item>Massachusetts</item>
        <item>New Hampshire</item>
        <item>Rhode Island</item>
        <item>Vermont</item>
        <item>Alabama</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Mississippi</item>
        <item>South Carolina</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Kentucky</item>
        <item>North Carolina</item>
        <item>Ohio</item>
        <item>Tennessee</item>
        <item>Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
        <item>West Virginia</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Maryland</item>
        <item>New Jersey</item>
        <item>New York</item>
        <item>Pennsylvania</item>
        <item>Maine</item>
        <item>Hawaii</item>
        <item>Alaska</item>
        <item>Michigan</item>
    </string-array>

    <string-array name="trip_options_menu">
        <item>Flight</item>
        <item>Hotel</item>
        <item>Car</item>
        <item>Park</item>
        <item>Concert</item>
        <item>Game</item>
    </string-array>
</resources>
