<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/wbg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="35dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/tlogo" />


        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/lastName"
            android:layout_marginBottom="15dp"
            android:background="@drawable/wedittext"
            android:hint="@string/enterfirstname"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/email"
            android:layout_marginBottom="15dp"
            android:background="@drawable/wedittext"
            android:hint="@string/enterlastname"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/signupPassword"
            android:layout_marginBottom="15dp"
            android:background="@drawable/wedittext"
            android:hint="@string/emailhint"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/signupBtn"
            android:layout_marginBottom="15dp"
            android:background="@drawable/wedittext"
            android:hint="@string/Signuppasswordhint"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:textColor="@color/lightgrey"
            android:textColorHint="@color/lightgrey"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_above="@+id/alreadyAccount"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            android:background="@drawable/wgreybtn"
            android:text="@string/signupbutton"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/alreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signinBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:text="@string/alreadyhaveaccount"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/signinBtn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:background="@drawable/wclrbtnw"
            android:text="@string/signinbutton"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </RelativeLayout>


</LinearLayout>