<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wbg"
    android:orientation="vertical"
    tools:context=".activities.SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="30dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:background="@drawable/tlogo" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/wedittext"
                android:hint="@string/usernamehint"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:textColor="@color/grey"
                android:textColorHint="@color/etclr"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/passWord"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/wedittext"
                android:hint="@string/passwordhint"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:textColor="@color/grey"
                android:textColorHint="@color/etclr"
                android:textSize="16sp" />

            <Button
                android:id="@+id/signinButton"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/wgreybtn"
                android:text="@string/signinbutton"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/donthaveanaccount"
                android:textAlignment="center"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/signupPage"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/wclrbtnw"
                android:text="@string/signupbutton"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>

