<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingTop="5dp"
    tools:context=".activities.TravelHistoryActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/travel_history_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_a_trip"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="25sp" />

        <!--<ImageView-->
            <!--android:id="@+id/line"-->
            <!--android:layout_width="240dp"-->
            <!--android:layout_height="5dp"-->
            <!--android:layout_below="@+id/travel_history_title"-->
            <!--android:layout_margin="15dp"-->
            <!--android:background="@drawable/lineblue" />-->

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="170dp">

                <ImageView
                    android:id="@+id/post_image"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_add_a_photo_blue_24dp" />

                <TextView
                    android:id="@+id/tvLName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_toEndOf="@+id/post_image"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvObjects"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvLName"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_toEndOf="@+id/post_image"
                    android:layout_weight="1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="9sp" />

            </RelativeLayout>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/input_switch"
                android:layout_marginStart="10dp"
                android:text="@string/set_trip_as_public"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:checked="true"
                android:theme="@style/Platform.MaterialComponents.Light"
                android:padding="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/input_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:maxLines="2"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/edittextline"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/hint_title"
                android:gravity="start"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/location"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:id="@+id/input_city"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/edittextline"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:maxLines="2"
                    android:hint="@string/hint_city_town"
                    android:padding="10dp" />

                <Spinner
                    android:id="@+id/input_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:entries="@array/state"
                    android:padding="10dp"
                    android:popupBackground="#ffffff"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/dates"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:id="@+id/input_date"
                    android:layout_marginStart="10dp"
                    android:clickable="true"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:focusable="false"
                    android:inputType="date"
                    android:background="@drawable/edittextline"
                    android:maxLines="2"
                    android:hint="@string/hint_date"
                    android:padding="10dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:id="@+id/input_number_of_days"
                    android:layout_marginStart="10dp"
                    android:inputType="number"
                    android:background="@drawable/edittextline"
                    android:textColorHint="@color/colorPrimary"
                    android:maxLines="2"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/hint_number_of_days"
                    android:padding="10dp" />

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/input_description"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:maxLines="20"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/edittextline"
                android:hint="@string/hint_description"
                android:gravity="start"
                android:padding="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <Button
                    android:id="@+id/post_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/post_button"
                    android:layout_marginEnd="100dp"
                    android:layout_marginStart="100dp"
                    android:background="@color/colorPrimaryLight" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/save_button"
                    android:background="@color/colorPrimaryLight"
                    android:visibility="invisible"/>

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/save_button"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/cancel_button"
                    android:background="@color/colorPrimaryLight"
                    android:visibility="invisible"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/remove_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/remove_button"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:background="@color/colorPrimaryLight"
                    android:visibility="gone"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>