<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/monochrome_white"
    tools:context=".activities.SearchActivity">

    <RelativeLayout
        android:id="@+id/search_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search_box"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:hint="@string/search_hint"
            android:textColor="@color/monochrome_black"
            android:textColorHint="@color/monochrome_gray_dark"
            android:background="@drawable/search_box" />

        <ImageButton
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/search_box"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/ic_search_navigation"
            android:background="#00000000"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <ScrollView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_input"
        android:layout_above="@id/bottom_nav">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:nestedScrollingEnabled="false">

            <RelativeLayout
                android:id="@+id/column_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/column_user_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/users"
                    android:textAllCaps="true"
                    android:layout_centerInParent="true"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_toStartOf="@id/column_user_text"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:background="@color/main_colors_orange" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_toEndOf="@id/column_user_text"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:background="@color/main_colors_orange" />

            </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_result_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"/>

            <RelativeLayout
                android:id="@+id/column_trips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/column_trips_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/travel_stories"
                    android:textAllCaps="true"
                    android:layout_centerInParent="true"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_toStartOf="@id/column_trips_text"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:background="@color/main_colors_orange" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_toEndOf="@id/column_trips_text"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:background="@color/main_colors_orange" />

            </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trip_result_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"/>
  
      </LinearLayout>

  </ScrollView>
  
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_nav" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:itemIconTint="@drawable/selector"
        android:layout_alignParentBottom="true"
        android:background="@color/monochrome_gray_light"
        app:menu="@menu/bottom_navigation" />

</RelativeLayout>
